--- a/README
+++ b/README
@@ -21,6 +21,6 @@ Gene sequences (mRNA) are available under XXXX (GENBANK/ NCBI)
 IMAGING DATA AND TRANSCRIPTOME ANALYSES
 Because limited storage, the data for transcriptome assemblies, differential expression analyses, RT-PCR and qPCR results, as well as the original imaging files, have been uploaded to Zenodo: https://doi.org/10.5281/zenodo.11619572. 
 
-Information on the hairpins and probe sets used for HCR in situ hybridizations has been added to a specific folder "HCR_protocol" under "1.Protocols".
+Information on the hairpins and probe sets used for HCR in situ hybridizations has been added to a specific folder "./HCR_protocol/HCR_probe_design" in "1.Protocols".
 
-RT- and qPCR oligonucleotides designed for this research have been included in the folder for "RT-PCR_protocol" under "1.Protocols".
+RT- and qPCR oligonucleotides designed for this research are presented in a file "./RT-PCR_protocol/primers-RT-PCR" under "1.Protocols".
